HW Relnotes: Move uaudio to Sound
Since this is the only usb sound driver, I think it makes more sense
to put it with the other sound drivers. Especially since nobody has
ever noticied that the link is incorrectly named and it has actually
always been broken.

Reviewed by:		christos, mhorne
Differential Revision:	https://reviews.freebsd.org/D51262

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -713,6 +713,8 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.snd_t4dwave;
 
+&hwlist.snd_uaudio;
+
 &hwlist.snd_via8233;
 
 &hwlist.snd_via82c686;
@@ -784,8 +786,6 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 &hwlist.ulpt;
 
 &hwlist.umct;
-
-[amd64, i386] Audio Devices (man:uaudio[4] driver)
 
 &hwlist.uvisor;
 
