HW Relnotes: Add mtw(4) to the template for 15.0
The mtw(4) driver was added in src:c14b016242613 for FreeBSD 15.0
Add it to the Release Hardware Notes in the wireless section.

Reviewed by:		carlavilla, mhorne (mentors)
Differential Revision:	https://reviews.freebsd.org/D48906

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -580,6 +580,8 @@ The *ukswitch* driver is designed to support potentially unknown Ethernet Switch
 
 Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
+&hwlist.mtw;
+
 &hwlist.otus;
 
 &hwlist.ral;
