handbook/x11/nvidia: Fix matching quotation

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -316,7 +316,7 @@ tunable:
 
 [source,shell]
 ....
-hw.nvidiadrm.modeset="1'
+hw.nvidiadrm.modeset="1"
 ....
 
 Both PRIME and crossref:wayland[wayland-synopsis,Wayland]
