handbook/dtrace: Remove outdated comments about the MIB provider
It's been available on FreeBSD for a while now.

--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -97,7 +97,7 @@ The `ctfconvert` utility parses `DWARF` `ELF` debug sections created by the comp
 
 Some different providers exist for FreeBSD than for Solaris(TM).
 Most notable is the `dtmalloc` provider, which allows tracing man:malloc[9] by type in the FreeBSD kernel.
-Some of the providers found in Solaris(TM), such as `cpc` and `mib`, are not present in FreeBSD.
+Some of the providers found in Solaris(TM), such as `cpc`, are not present in FreeBSD.
 These may appear in future versions of FreeBSD.
 Moreover, some of the providers available in both operating systems are not compatible, in the sense that their probes have different argument types.
 Thus, `D` scripts written on Solaris(TM) may or may not work unmodified on FreeBSD, and vice versa.
