new committer (src): Aymeric Wibo (obiwac)
Summary:
Complete steps for new committers from the committer's guide:

1. Add myself to shared/authors.adoc.
2. Add myself to shared/contrib-committers.adoc.
3. Add a news entry.
4. Add my PGP key.

Reviewed by:	mckusick (mentor), jrm (mentor)
Approved by:	mckusick (mentor), jrm (mentor)
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D51427

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1431,6 +1431,9 @@ include::{include-path}peter.key[]
 === `{nwhitehorn}`
 include::{include-path}nwhitehorn.key[]
 
+=== `{obiwac}`
+include::{include-path}obiwac.key[]
+
 === `{miwi}`
 include::{include-path}miwi.key[]
 
