--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -2543,6 +2543,10 @@
 :nyan-email: nyan@FreeBSD.org
 :nyan: {nyan-name} <{nyan-email}>
 
+:obiwac-name: Aymeric Wibo
+:obiwac-email: obiwac@FreeBSD.org
+:obiwac: {obiwac-name} <{obiwac-email}>
+
 :obraun-name: Oliver Braun
 :obraun-email: obraun@FreeBSD.org
 :obraun: {obraun-name} <{obraun-email}>
