fdp/manual-pages: Reference style.mdoc(5)

--- a/documentation/content/en/books/fdp-primer/manual-pages/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/manual-pages/_index.adoc
@@ -569,6 +569,7 @@ Resources for manual page writers:
 
 * man:man[1]
 * man:mandoc[1]
+* man:style.mdoc[5]
 * man:groff_mdoc[7]
 * http://manpages.bsd.lv/mdoc.html[Practical UNIX Manuals: mdoc]
 * http://manpages.bsd.lv/history.html[History of UNIX Manpages]
