committers-guide: Suggest consistency in prefixes
Reviewed by:	imp
Differential Revision:	https://reviews.freebsd.org/D51531

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2485,6 +2485,7 @@ A good rule of thumb is to stay below 63 characters, and aim for about 50 or few
 === Prefix the subject line with a component, if applicable
 
 If the change relates to a specific component the subject line may be prefixed with that component name and a colon (:).
+If applicable, try to use the same prefix used in previous commits to the same files.
 
 ✓ `foo: Add -k option to keep temporary data`
 
