contrib-additional.adoc: add Vladimir Grebenshchikov <vova@zote.me>
Add Vladimir Grebenshchikov <vova@zote.me> for ports
net/net/amneziawg-kmod and net/amneziawg-tools.

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -2293,6 +2293,7 @@
 * Vladimir A. Jakovenko <mailto:vovik@ntu-kpi.kiev.ua[vovik@ntu-kpi.kiev.ua]>
 * Vladimir Chukharev <mailto:vladimir.chukharev@gmail.com[vladimir.chukharev@gmail.com]>
 * Vladimir Gorelov <mailto:virtual.lark@gmail.com[virtual.lark@gmail.com]>
+* Vladimir Grebenshchikov <mailto:vova@zote.me[vova@zote.me]>
 * Vladimir Kurtikov <mailto:vk@vk.pp.ru[vk@vk.pp.ru]>
 * Vladimir Kushnir <mailto:kushn@mail.kar.net[kushn@mail.kar.net]>
 * Vladimir Osintsev <mailto:oc@nm.ru[oc@nm.ru]>
