status: 2025q1: doceng: fix links
Fix five broken URLs.

--- a/website/content/en/status/report-2025-01-2025-03/doceng.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/doceng.adoc
@@ -9,9 +9,9 @@ Version:	$Id:$
 === Documentation Engineering Team
 
 Links: +
-link:https://www.freebsd.org/docproj/[FreeBSD Documentation Project] URL: link:https://www.freebsd.org/docproj/url[] +
-link:https://docs.freebsd.org/en/books/fdp-primer/[FreeBSD Documentation Project Primer for New Contributors] URL: link:https://docs.freebsd.org/en/books/fdp-primer/url[] +
-link:https://www.freebsd.org/administration/#t-doceng[Documentation Engineering Team] URL: link:https://www.freebsd.org/administration/#t-docengurl[]
+link:https://www.freebsd.org/docproj/[FreeBSD Documentation Project] URL: link:https://www.freebsd.org/docproj/[] +
+link:https://docs.freebsd.org/en/books/fdp-primer/[FreeBSD Documentation Project Primer for New Contributors] URL: link:https://docs.freebsd.org/en/books/fdp-primer/[] +
+link:https://www.freebsd.org/administration/#t-doceng[Documentation Engineering Team] URL: link:https://www.freebsd.org/administration/#t-doceng[]
 
 Contact: FreeBSD Doceng Team <doceng@FreeBSD.org>
 
@@ -61,8 +61,8 @@ New variables were documented for `USES=samba`:
 ==== FreeBSD Translations on Weblate
 
 Links: +
-link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblateurl[] +
-link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/url[]
+link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblate[] +
+link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/[]
 
 ===== Q1 2025 Status
 
