status: 2024q2: doceng: fix links
Fix five broken URLs.

--- a/website/content/en/status/report-2024-04-2024-06/doceng.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/doceng.adoc
@@ -8,9 +8,9 @@ Version:	$Id:$
 
 === Documentation Engineering Team
 
-Link: link:https://www.freebsd.org/docproj/[FreeBSD Documentation Project] URL: link:https://www.freebsd.org/docproj/url[] +
-Link: link:https://docs.freebsd.org/en/books/fdp-primer/[FreeBSD Documentation Project Primer for New Contributors] URL: link:https://docs.freebsd.org/en/books/fdp-primer/url[] +
-Link: link:https://www.freebsd.org/administration/#t-doceng[Documentation Engineering Team] URL: link:https://www.freebsd.org/administration/#t-docengurl[]
+Link: link:https://www.freebsd.org/docproj/[FreeBSD Documentation Project] URL: link:https://www.freebsd.org/docproj/[] +
+Link: link:https://docs.freebsd.org/en/books/fdp-primer/[FreeBSD Documentation Project Primer for New Contributors] URL: link:https://docs.freebsd.org/en/books/fdp-primer/[] +
+Link: link:https://www.freebsd.org/administration/#t-doceng[Documentation Engineering Team] URL: link:https://www.freebsd.org/administration/#t-doceng[]
 
 Contact: FreeBSD Doceng Team <doceng@FreeBSD.org>
 
@@ -28,8 +28,8 @@ These are three highlighted contributions in this quarter:
 
 ==== FreeBSD Translations on Weblate
 
-Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblateurl[] +
-Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/url[]
+Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblate[] +
+Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/[]
 
 ===== Q2 2024 Status
 
