status: 2024q1: doceng: fix links
Fix two broken URLs.

--- a/website/content/en/status/report-2024-01-2024-03/doceng.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/doceng.adoc
@@ -23,8 +23,8 @@ mailto:trhodes@FreeBSD.org[Tom Rhodes]'s doc commit bit was taken for safekeepin
 
 ==== FreeBSD Translations on Weblate
 
-Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblateurl[] +
-Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/url[]
+Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblate[] +
+Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/[]
 
 ===== Q1 2024 Status
 
