--- a/website/content/en/status/report-2024-10-2024-12/doceng.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/doceng.adoc
@@ -37,8 +37,8 @@ The doceng@ team is a body to handle some of the meta-project issues associated 
 
 ==== FreeBSD Translations on Weblate
 
-Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblateurl[] +
-Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/url[]
+Link: link:https://wiki.freebsd.org/Doc/Translation/Weblate[Translate FreeBSD on Weblate] URL: link:https://wiki.freebsd.org/Doc/Translation/Weblate[] +
+Link: link:https://translate-dev.freebsd.org/[FreeBSD Weblate Instance] URL: link:https://translate-dev.freebsd.org/[]
 
 ===== Q4 2024 Status
 
