--- a/website/static/status/report-sample.adoc
+++ b/website/static/status/report-sample.adoc
@@ -1,8 +1,8 @@
 === Status Report Sample - This Will Become The Title
 
 Links: +
-link:http://www.example.com/project/url[Link description] URL: link:http://www.example.com/project/url[] +
-link:http://www.example.com/other/url[Another link description] URL: link:http://www.example.com/other/url[]
+link:http://www.example.com/project/[Link description] URL: link:http://www.example.com/project/[] +
+link:http://www.example.com/other/[Another link description] URL: link:http://www.example.com/other/[]
 
 Contact: Full Name <email@example.org>
 
