--- a/website/content/en/status/report-2025-01-2025-03/releng.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/releng.adoc
@@ -1,7 +1,7 @@
 === FreeBSD Release Engineering Team
 
 Links: +
-link:https://www.freebsd.org/releases/13.5R/announce/[FreeBSD 13.5-RELEASE announcement] URL: link:https://www.freebsd.org/releases/13.5/announce/[] +
+link:https://www.freebsd.org/releases/13.5R/announce/[FreeBSD 13.5-RELEASE announcement] URL: link:https://www.freebsd.org/releases/13.5R/announce/[] +
 link:https://www.freebsd.org/releases/14.3R/schedule/[FreeBSD 14.3-RELEASE schedule] URL: link:https://www.freebsd.org/releases/14.3R/schedule/[] +
 link:https://download.freebsd.org/releases/ISO-IMAGES/[FreeBSD releases] URL: link:https://download.freebsd.org/releases/ISO-IMAGES/[] +
 link:https://download.freebsd.org/snapshots/ISO-IMAGES/[FreeBSD development snapshots] URL: link:https://download.freebsd.org/snapshots/ISO-IMAGES/[]
