Porters handbook - Makefiles: Escape a + sign
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/499

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -2275,7 +2275,7 @@ DISTFILES=	source1.tar.gz:source1 \
 
 Okay, so the previous example did not reflect the new port's needs? In this section we will explain in detail how the fine grained fetching mechanism `MASTER_SITES:n` works and how it can be used.
 
-. Elements can be postfixed with `:__n__` where _n_ is `[^:,]+`, that is, _n_ could conceptually be any alphanumeric string but we will limit it to `[a-zA-Z_][0-9a-zA-Z_]+` for now.
+. Elements can be postfixed with `:__n__` where _n_ is `[^:,]\+`, that is, _n_ could conceptually be any alphanumeric string but we will limit it to `[a-zA-Z_][0-9a-zA-Z_]+` for now.
 +
 Moreover, string matching is case sensitive; that is, `n` is different from `N`.
 +
