www/Administration: fernape stepped down doceng secretary

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -190,7 +190,7 @@ The Core Team Secretary is also responsible for writing and sending out monthly 
 
 The FreeBSD Documentation Engineering Team Secretary is a non-voting member of the Documentation Engineering Team, responsible for documenting the work done by doceng, keeping track of voting procedures, and to be an interface to the other teams, especially the admin and Core teams.
 
-* {fernape}
+There is currently no Documentation Engineering Team Secretary appointed; emails are being forwarded to the Documentation Engineering Team.
 
 [[t-portmgr-secretary]]
 == Ports Management Team Secretary <portmgr-secretary@FreeBSD.org>
