mit_krb5.adoc: typo fixes

--- a/website/content/en/status/report-2025-04-2025-06/mit_krb5.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/mit_krb5.adoc
@@ -2,7 +2,7 @@
 
 Contact: Cy Schubert <cy@FreeBSD.org>
 
-The FreeBSD Foundatation was approached to import MIT KRB5 into FreeBSD with the intent to replace our aging Heimdal.
+The FreeBSD Foundation was approached to import MIT KRB5 into FreeBSD with the intent to replace our aging Heimdal.
 
 The Enterprise Working Group made a request to the Foundation to replace Heimdal with MIT KRB5.
 
@@ -16,7 +16,7 @@ Tasks completed:
 Additional remaining tasks:
 
 * Fix port build errors identified by a ports exp-run.
-* Produce a writup of the new Kerberos.
+* Produce a writeup of the new Kerberos.
 * Determine if migration of the Heimdal database to an MIT database is possible.
   (At the moment this appears unlikely due to the age of our ancient Heimdal and the lack of support for old crypto in newer Heimdal MIT).
 * Produce Heimdal Kerberos database to MIT database migration documentation (if possible).
