website: add dvl as a new portmgr member in /administration

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3798,7 +3798,7 @@
 :pkgmgr-members: {antoine}, {bdrewery}
 
 // FreeBSD Ports Manager Team
-:portmgr-members: {mat}, {bapt}, {pizzamig}, {rene}, {tcberner}
+:portmgr-members: {mat}, {bapt}, {pizzamig}, {rene}, {tcberner}, {dvl}
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
