--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -90,6 +90,7 @@ The https://www.freebsd.org/portmgr/charter/[portmgr team charter] describes the
 * {pizzamig}
 * {rene}
 * {tcberner} (Secretary)
+* {dvl}
 
 '''
 
