Add warning about sddm+kde+wayland stability issues
https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=286592

Signed-off-by: Paavo-Einari Kaipila <pave@freebsd.org>

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -162,6 +162,14 @@ To increase messages size execute:
 [[kde-start]]
 ==== Start KDE Plasma
 
+[WARNING]
+====
+SDDM uses a newer crossref:wayland[wayland, Wayland] display server with KDE Plasma by default.
+As of August 2025, this combination does have some stability issues.
+If you encounter them, choose more traditional crossref:x11[x11, X11] session from the bottom-left of the login screen.
+You can also launch X11 session directly by using the startx method described below.
+====
+
 The preferred KDE Plasma display manager is package:x11/sddm[].
 To install package:x11/sddm[], execute:
 
