handbook: The freebsd-boot 512KB limit is for legacy BIOS
A question[1] on Reddit asked about the 512KB freebsd-boot limit due to
"current boot code limitations" in the context of EFI booting.  Be clear
that this is aobut legacy BIOS booting.

This section should have a larger rework for EFI, but this is at least
an improvement for the existing text.

[1] https://www.reddit.com/r/freebsd/comments/1mia9z6/boot_partition_over_512kb_works_fine/

Reviewed by:	imp
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D51702

--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -634,7 +634,8 @@ The `Size` may be entered with common abbreviations: _K_ for kilobytes, _M_ for 
 ====
 Proper sector alignment provides the best performance, and making partition sizes even multiples of 4K bytes helps to ensure alignment on drives with either 512-byte or 4K-byte sectors.
 Generally, using partition sizes that are even multiples of 1M or 1G is the easiest way to make sure every partition starts at an even multiple of 4K.
-There is one exception: the _freebsd-boot_ partition should be no larger than 512K due to current boot code limitations.
+There is one exception: a _freebsd-boot_ partition for BIOS booting should be no larger than 512K due to legacy boot code limitations.
+This limitation does not apply to UEFI booting.
 ====
 
 A `Mountpoint` is needed if the partition will contain a file system.
