--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -33,7 +33,7 @@ General discussions about the pending release and known issues should be sent to
 |Action |Expected |Actual |Description
 |Initial release schedule announcement |- |7 April 2025 |Release Engineers send announcement email to developers with a rough schedule.
 |Release schedule reminder |11 July 2025 |11 July 2025 |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|HEAD slush begins |8 August 2025 |- |Release Engineers announce that further commits to the {localBranchHead} branch will not require explicit approval, however new features should be avoided.
+|HEAD slush begins |8 August 2025 |8 August 2025 |Release Engineers announce that further commits to the {localBranchHead} branch will not require explicit approval, however new features should be avoided.
 |{localBranchStable} branch |5 September 2025 |- |{localBranchStable} branch created; future release engineering proceeds on this branch.
 |ALPHA1 builds begin |5 September 2025 |- |First alpha test snapshot.
 |ALPHA2 builds begin |12 September 2025 |- |Second alpha test snapshot.
