Add errata affecting 14.2R and 14.3R
FreeBSD-EN-25:12.efi affects 14.3R
FreeBSD-EN-25:13.wlan_tkip affects 14.3R
FreeBSD-EN-25:14.route affects 14.2R and 14.3R

--- a/website/content/en/releases/14.3R/errata.adoc
+++ b/website/content/en/releases/14.3R/errata.adoc
@@ -54,6 +54,9 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |===
 |Errata |Date |Topic
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:10.zfs.asc[FreeBSD-EN-25:10.zfs] |2 July 2025 |Corruption in ZFS replication streams from encrypted datasets
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:12.efi.asc[FreeBSD-EN-25:12.efi] |8 August 2025 |bsdinstall(8) not copying the correct loader on systems with
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:13.wlan_tkip.asc[FreeBSD-EN-25:13.wlan_tkip] |8 August 2025 |net80211 TKIP crypto support fails for some drivers
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:14.route.asc[FreeBSD-EN-25:14.route] |8 August 2025 |route(8) monitor buffers too much when redirected to a file
 |===
 
 [[open-issues]]
