doceng: Capitalize "Bugzilla" in open PRs section

--- a/website/content/en/status/report-2025-04-2025-06/doceng.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/doceng.adoc
@@ -112,6 +112,6 @@ doceng@:
 
 ==== Open issues
 
-There is 1 Open PRs in bugzilla assigned to doceng@:
+There is 1 Open PRs in Bugzilla assigned to doceng@:
 
  * 267274 Please remove the zh-CN Handbook of the current FreeBSD website
