Handbook - Wayland: Improve synopsis readability
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/287

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -73,9 +73,10 @@ After reading this chapter, you will know:
 
 [[wayland-overview]]
 == Wayland Overview
-Wayland is a new display server, but it differs from Xorg in several important ways.
-First, Wayland is only a protocol that acts as an intermediary between clients using a different mechanism which removes the dependency on an X server.
-Xorg includes both the X11 protocol, used to run remote displays and the X server will accept connections and display windows.
+Wayland is a communication protocol that can replace a display server such as Xorg.
+It differs from Xorg in several important ways.
+First, Wayland is only a protocol that acts as an intermediary between clients using a mechanism which removes the dependency on an X server.
+Xorg includes both the X11 protocol, used to run remote displays, and the X server, used to accept connections and display windows.
 Under Wayland, the compositor or window manager provides the display server instead of a traditional X server.
 
 Since Wayland is not an X server, traditional X screen connections will need to utilize other methods such as VNC or RDP for remote desktop management.
