Handbook - Desktop: Improve KDE Plasma guide
Improved a bit by me.

Pull Request:	https://github.com/freebsd/freebsd-doc/pull/487

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -151,12 +151,21 @@ Enable D-BUS service in `/etc/rc.conf` to start at system boot:
 # sysrc dbus_enable="YES"
 ....
 
-To increase messages size execute:
+KDE Plasma requires larger message sizes for optimal performance.
+
+Add the following lines to man:sysctl.conf[5]:
+
+[.programlisting]
+....
+sysctl net.local.stream.recvspace=65536
+sysctl net.local.stream.sendspace=65536
+....
+
+To apply the change, either run the following command as root or simply reboot the system:
 
 [source,shell]
 ....
-# sysctl net.local.stream.recvspace=65536
-# sysctl net.local.stream.sendspace=65536
+# sysctl -f /etc/sysctl.conf
 ....
 
 [[kde-start]]
