Website/Handbook: Add Fastly reference
Reviewed by:	dbaio@
Approved by:	dch@
Differential Revision:	D49695

--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -96,6 +96,8 @@ http://ftp-archive.FreeBSD.org is not in the GeoDNS Infrastructure, hosted in on
 
 The project is looking for new locations; those willing to sponsor, please reach out to the Cluster Administrators team for more information.
 
+There is an ongoing project to provide **download.FreeBSD.org** and **pkg.FreeBSD.org** through link:https://www.fastly.com[Fastly], using its CDN acceleration, caching, and bandwidth to bring FreeBSD images and packages to our globally distributed community.
+
 Mirror list maintained by the community and other companies:
 
 [cols="1,1,3"]
