--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -293,3 +293,12 @@ The projects below are of particular interest.
 == Archives
 
 http://ftp-archive.FreeBSD.org/pub/FreeBSD-Archive/old-releases/[Past releases] of FreeBSD.
+
+[[fastly]]
+== Fastly CDN
+
+The FreeBSD project gratefully acknowledges the support of https://www.fastly.com[Fastly], providing CDN acceleration, caching, and bandwidth to bring FreeBSD images and packages to our globally distributed community.
+
+image::../gifs/fastlyLogo-red-SVG.svg[Fastly Logo,120]
+
+See also the link:{handbook}mirrors[FreeBSD project mirrors].
