FDP Primer - Translations: Add https to a link
Differential Revision:	D51711

--- a/documentation/content/en/books/fdp-primer/translations/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/translations/_index.adoc
@@ -176,7 +176,7 @@ documentation/
 `sv` is the name of the translation, in [.filename]#lang# form.
 Note the two Makefiles, which will be used to build the documentation.
 
-Use git diff command to generate a diff and send it to the link:reviews.freebsd.org/[reviews system].
+Use git diff command to generate a diff and send it to the link:https://reviews.freebsd.org/[reviews system].
 
 [source,shell]
 ....
