FDP - Structure: Updated Managing Contributor Lists
Reviewed by:		ziaee@
Approved by:		dbaio@, carlavilla@
Differential Revision:	D49225

--- a/documentation/content/en/books/fdp-primer/structure/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/structure/_index.adoc
@@ -264,7 +264,22 @@ toc::[]
 The FreeBSD project recognizes contributors in several different lists in the documentation and in printed materials.
 This section describes how the documentation team manages changes to these lists.
 
-=== Finding the Correct Files
+=== Mentor and New Committer Relationship Lists
+
+Since FreeBSD 7.0, FreeBSD has maintained link:https://cgit.freebsd.org/src/tree/share/misc[three lists of contributor mentor / mentee relationships] - one for source code, one for ports and one for documentation.
+These files are in *".dot"* format, intended for use with the popular graphing toolkit package:graphics/graphviz[] available as a FreeBSD package or port.
+
+[NOTE]
+====
+man:dot[1] is installed as part of the package:graphics/graphviz[] package or port.
+The [.filename]#dot# program reads files in *".dot"* format and creates a graphical image of the directed graph.
+====
+
+The three files often serve as a learning experience for new committers of all three teams who are instructed to add themselves, and their mentor, to the appropriate file as their first commit.
+Each file has a "current" section for new committers, an "alumni" section for when the commit bit is returned, and a "mentor / mentee" section showing the relationships.
+The format for each type of entry is explained at the top of the file.
+
+=== General Contributor Lists
 
 extref:{contributors}[Contributors] to FreeBSD are maintained in article format.
 The source file for managing the *Contributors* article file is located at:
@@ -334,19 +349,19 @@ The order of entries for all files is found in the table below.
 
 === "In Memoriam" Section
 
-If the intent is to notify the BSD community of the death of a community member, the following procedures should be used:
+When notifying the BSD community of the death of a community member, the following procedure should be used:
 
-. Search the files above for the name, email address, and nickname (such as `foobsd`).
-. Since the member is deceased (which should be double checked) remove the name from the appropriate file and add them to the "In Memoriam" file ([.filename]#contrib-develinmemoriam.adoc# as noted above) by editing the appropriate files.
-Try to find some additional information about their contributions to FreeBSD over the years and add it with their entry in the file.
-This may require asking in the development mailing lists, contacting colleagues, contacting the FreeBSD Foundation, or searching through the commit logs.
-. Where an email address is found with a name, remove the email address, but leave the name.
+. Use the file [.filename]#~/doc/shared/authors.adoc# to look up the person's name and attribute reference, such as `{foobsd}`.
+. If they are a current member of one or more FreeBSD project teams in [.filename]#~/doc/website/content/en/administration.adoc#, remove all instances of their attribute reference.
+Also, complete the following edits:
 +
-[cols="25%,25%,25%,25%", frame="none", options="header"]
-|===
-| Purpose | Section Anchor | File in ~/doc/documentation/content/{language}/articles/contributors/ | Order Specification
-| *Development Team: In Memoriam* | [.filename]#contrib-develinmemoriam.adoc# | [.filename]#contrib-develinmemoriam.adoc# | rough reverse chronological order
-|===
+* [.filename]#~/doc/shared/contrib-committers.adoc# - Remove the attribute reference.
+* [.filename]#~/doc/shared/contrib-corealumni.adoc# - If they are a _current_ member of the core team, create an entry showing start and end dates.
+* [.filename]#~/doc/shared/contrib-develalumni.adoc# - Add the attribute reference and dates of activity as a committer.
+* [.filename]#~/doc/shared/contrib-portmgralumni.adoc# - Add the attribute reference if necessary.
+* [.filename]#~/doc/shared/contrib-additional.adoc# - Remove the entry.
+* [.filename]#~/doc/shared/contrib-386bsd.adoc# - This is a historical document only.
+No changes are needed.
 +
 . In the [.filename]#~/doc/shared/authors.adoc# file, comment out (using one backslash '\') the email address to avoid creating the email link "mailto:"
 See the example for `itojun` below:
@@ -363,4 +378,43 @@ See the example for `itojun` below:
 
 [..]
 ....
++
+. Since the member is deceased (which should be double checked), add them to the "In Memoriam" file [.filename]#contrib-develinmemoriam.adoc#.
++
+Try to find some factual information about their contributions to FreeBSD over the years and add it with their entry in the file.
+This may require asking in the development mailing lists, contacting colleagues, contacting the FreeBSD Foundation, or searching through the commit logs.
++
+To find the date of their first commit, use:
++
+[source.programlisting,asciidoc]
+....
+% cd ~/src
+% git log --reverse --author=foobsd     # search for first commit of foobsd
+....
++
+This will print out their commits in reverse order.
+The date of the first commit will be at the top.
++
+Ensure that the format of the dates match other entries:
++
+[source.programlisting,asciidoc]
+....
+(year of commit bit start - year of commit bit end; RIP year deceased)
 
+For example:
+
+* Foo BSD (2007 - 2010; RIP 2016)
+....
++
+Check the ordering of the entries in the file.
++
+[cols="25%,25%,25%,25%", frame="none", options="header"]
+|===
+| Purpose | Section Anchor | File in ~/doc/documentation/content/{language}/articles/contributors/ | Order Specification
+| *Development Team: In Memoriam* | [.filename]#contrib-develinmemoriam.adoc# | [.filename]#contrib-develinmemoriam.adoc# | rough reverse chronological order
+|===
++
+See the "In Memoriam" file for similar entries.
++
+. Finally, if applicable, move the committer member entry from the "current" section to the "alumni" section of the appropriate link:https://cgit.freebsd.org/src/tree/share/misc[list of contributor mentor / mentee relationships] along with an appropriate date.
+It is not necessary to change the mentor / mentee relationship.
