Handbook-Network: Clarifying Identi. of Wireless Device for WiFi Setup
Reviewed by:	ziaee@, Pau Amma <pauamma@gundo.com>
Differential Revision:	D47158

--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -577,11 +577,15 @@ The following sections discuss each step.
 
 Connecting FreeBSD to an existing wireless network is a very common situation.
 
-This procedure shows the steps required:
+This Quick Start procedure shows the steps required to connect to a network using basic authentication.
+A more detailed procedure is given in the next section.
 
-* The first step will be to obtain the SSID (Service Set Identifier) and PSK (Pre-Shared Key) for the wireless network from the network administrator.
+The first step is to obtain the Service Set Identifier (SSID) and Pre-Shared Key (PSK) for the wireless network from the network administrator.
 
-* The second step will be to add default configuration paramaters and an entry for this network to [.filename]#/etc/wpa_supplicant.conf#. If the file does not exist, create it:
+The second step is to add an entry for this network to [.filename]#/etc/wpa_supplicant.conf#.
+
+If the file does not exist, create it.
+Consult man:wpa_supplicant.conf[5] for details on formatting entries in this file.
 
 [.programlisting]
 ....
@@ -596,10 +600,28 @@ network={
 }
 ....
 
-<.> Is the SSID of the wireless network. Replace it with the name of the wireless network.
-<.> Is the PSK of the wireless network. Replace it with the password of the wireless network.
+<.> Is the SSID of the wireless network.
+Replace it with the name of the wireless network.
+<.> Is the PSK of the wireless network.
+Replace it with the password of the wireless network.
 
-* The third step will be to add the network entry to configure the network on startup:
+The third step is to add the network interface entry to configure the network on startup.
+Obtain the network device interface by using the sysctl `net.wlan.devices`.
+In the listing below, the output of this sysctl shows the network device interface is "iwn0".
+
+[source,shell]
+....
+# sysctl net.wlan.devices
+....
+
+The output should be similar to the following:
+
+[.programlisting]
+....
+net.wlan.devices: iwm0
+....
+
+In the sysrc line that follows, replace "iwn0" with the output of the sysctl command if needed.
 
 [source,shell]
 ....
@@ -607,7 +629,7 @@ network={
 # sysrc ifconfig_wlan0="WPA DHCP"
 ....
 
-* And the last step will be the restart `netif` service executing the following command:
+* And the last step is to restart the `netif` service executing the following command:
 
 [source,shell]
 ....
@@ -617,7 +639,7 @@ network={
 [[basic-wireless-configuration]]
 === Basic Wireless Configuration
 
-The first step will be to configure the wireless network card to an interface.
+This section provides a more detailed example of configuring a wireless network card.
 To find out what wireless network cards are in the system check the section
 crossref:network[config-identify-network-adapter, Identify Network Adapters].
 
