Porters handbook: Fix pdf build
Differential Revision:	D48476

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -101,8 +101,8 @@ From time to time, some software will use a version scheme that is not compatibl
 
 [TIP]
 ====
-When updating a port, it is possible to use man:pkg-version[8]'s `-t` argument to check if the new version is greater or lesser than before.
-See crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions].
+When updating a port, it is possible to use the `-t` argument of man:pkg-version[8] to check if the new version is greater or lesser than before.
+See below on how to use  man:pkg-version[8] to compare versions.
 ====
 
 [[makefile-versions-ex-pkg-version]]
@@ -1581,8 +1581,8 @@ USE_GITHUB=	yes
 GH_TAGNAME=	c472d66b
 ....
 
-This creates a versioning scheme that increases over time, and that is still
-before version `0` (see crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions] for details on man:pkg-version[8]):
+This creates a versioning scheme that increases over time, and that is still before version `0`.
+See crossref:makefiles[makefile-versions-ex-pkg-version, this secion on how to compare versions] using man:pkg-version[8]):
 
 [source,shell]
 ....
@@ -1627,7 +1627,7 @@ USE_GITHUB=	yes
 ....
 
 This creates a versioning scheme that increases over time (well, over commits), and does not conflict with the creation of a `0.7.4` version.
-(See crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-version\[8\] to Compare Versions] for details on man:pkg-version[8]):
+See crossref:makefiles[makefile-versions-ex-pkg-version, this section for how to compare versions] using  man:pkg-version[8]):
 
 [source,shell]
 ....
